--- a/code/src/scss/variables.scss
+++ b/code/src/scss/variables.scss
@@ -1,7 +1,8 @@
 $body__bgc--color: #ededed;
 $body__font--color: #505050;
-$calc__bgc--color: #c3d4e2;
+$calc__bgc--color: #434649;
 $calc__font--color: #ffffff;
 $button__bgc--color: #e2e2e2;
 $button__font--color:#666666;
 $button__hover--color:#ededed;
+$button__clear--color:#fcc;
