--- a/code/src/scss/index.scss
+++ b/code/src/scss/index.scss
@@ -2,3 +2,6 @@
 @import "body.scss";
 @import "calc.scss";
 @import "theme--colors.scss";
+@import "header.scss";
+@import "footer.scss";
+@import "nav.scss";
