--- a/code/src/scss/calc.scss
+++ b/code/src/scss/calc.scss
@@ -13,18 +13,20 @@
 		width: 96%;
 	}
 
-  &__display{
+  &__display-block{
     width: 96%;
     height: 15%;
     border-radius: 5px;
     text-align: right;
-    padding: 23px 10px;
+    padding: 10px 10px;
     box-sizing: border-box;
     font-size: 20px;
     transition: all 0.3s;
     text-overflow: ellipsis;
     overflow: hidden;
   }
+
+
   &__num{
     width: 21%;
     height: 11%;
