--- a/code/src/scss/calc.scss
+++ b/code/src/scss/calc.scss
@@ -1,6 +1,7 @@
 .calculator{
-	width: 450px;
+	//width: 450px;
 	height: 500px;
+	max-width: 645px;
   border-radius: 10px;
   padding: 30px 10px 10px 10px;
   display: flex;
@@ -14,22 +15,42 @@
 	}
 
   &__display-block{
-    width: 96%;
+		width: 80%;
+		margin: 0px 15px;
     height: 15%;
     border-radius: 5px;
-    text-align: right;
     padding: 10px 10px;
-    box-sizing: border-box;
-    font-size: 20px;
+    //box-sizing: border-box;
+    //font-size: 20px;
     transition: all 0.3s;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    //text-overflow: ellipsis;
+    //overflow: hidden;
   }
+	&__display-upper{
+		width: 100%;
+		height: 50%;
+		box-sizing: border-box;
+		font-size: 20px;
+		transition: all 0.3s;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		text-align: right;
+	}
+	&__display{
+		width: 100%;
+		height: 50%;
+		box-sizing: border-box;
+		font-size: 20px;
+		transition: all 0.3s;
+		text-overflow: ellipsis;
+		overflow: hidden;
+		text-align: right;
+	}
 
 
   &__num{
-    width: 21%;
-    height: 11%;
+		width: 85px;
+		height: 15%;
     border-radius: 5px;
     font-size: 25px;
   }
@@ -43,6 +64,33 @@
     @extend .calculator__num;
 
   }
+}
+.programming{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: stretch;
+	justify-content: space-around;
+	height: 360px;
+	width: 185px;
+}
+.ingeneer{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: stretch;
+	justify-content: space-around;
+	height: 360px;
+	width: 185px;
+}
+.simple{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: stretch;
+	justify-content: space-around;
+	height: 360px;
+	width: 370px;
 }
 .broken {
   animation: broken 2s;
