--- a/code/src/scss/nav.scss
+++ b/code/src/scss/nav.scss
@@ -11,6 +11,7 @@
 		text-align: center;
 		vertical-align: middle;
 		display: inline-block;
+		color: #999;
 	}
 
 }
@@ -40,6 +41,18 @@
 	flex-direction: column;
 
   }
+	&__list{
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: stretch;
+
+		&>div{
+			text-align: left;
+			&>label{
+				display: block;
+			}
+		}
+	}
 }
 .submenu--open:hover  .submenu{
   visibility: visible;
