--- a/code/src/scss/body.scss
+++ b/code/src/scss/body.scss
@@ -25,7 +25,7 @@
 	margin: 0 auto;
 	display: flex;
 	flex-direction: row;
-	flex-wrap: nowrap;
+	flex-wrap: wrap;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 }
