--- a/code/src/html/template/index.html
+++ b/code/src/html/template/index.html
@@ -24,40 +24,39 @@
 			<div class="calculator calculator--theme-dark" id="calculator1">
 			<nav class="calculator__menu">
 				<ul class="nav">
-					<li class="nav__item submenu--open">Вид
+					<li class="nav__item submenu--open">Вид:
 						<ul class="nav__submenu submenu">
-							<li class="submenu__item">Тема офрмления:
-								<div id="submenu__radios" class="submenu__radios">
-								  <div>
-								    <input type="radio" data-theme="dark" id="color--dark" name="color" value="dark" checked>
-								    <label for="color--dark">
-								      <span>
-								        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/242518/check-icn.svg" alt="Checked Icon" />
-								      </span>
-								    </label>
-								  </div>
-
-								  <div>
-								    <input type="radio" data-theme="light" id="color--light" name="color" value="light">
-								    <label for="color--light">
-								      <span>
-								        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/242518/check-icn.svg" alt="Checked Icon" />
-								      </span>
-								    </label>
-								  </div>
+							<li class="submenu__item">Тема оформления:
+								<div class="submenu__theme">
+									<div>
+										<label><input type="radio" data-theme="dark"  checked>Темный</label>
+									</div>
+									<div>
+										<label><input type="radio" data-theme="light">Светлый</label>
+									</div>
 								</div>
 							</li>
 							<li class="submenu__item">Тип:
-								<div id="submenu__list" class="submenu__list">
+								<div class="submenu__mode">
 									<div>
-										<label for="mode--simple">
-											<input type="radio" data-mode="simple" id="mode--simple" name="mode" value="Простой" checked>
-											Простой</label>
+										<label><input type="radio" data-mode="simple" name="simple" value="Простой" checked>Простой</label>
 									</div>
 									<div>
-										<label for="mode--ing">
-											<input type="radio" data-mode="eng" id="mode--ing" name="mode" value="Инженерный">
-											Инженерный</label>
+										<label><input type="radio" data-mode="eng" name="eng" value="Инженерный">Инженерный</label>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</li>
+					<li class="nav__item submenu--open"> Опции:
+						<ul class="nav__submenu submenu">
+							<li class="submenu__item">История:
+								<div class="submenu__hist">
+									<div>
+										<label><input type="radio" data-hist="close" name="close" value="Закрыть" checked>Закрыть</label>
+									</div>
+									<div>
+										<label><input type="radio" data-hist="open" name="open" value="Открыть">Открыть</label>
 									</div>
 								</div>
 							</li>
@@ -66,8 +65,10 @@
 				</ul>
 			</nav>
 
-
 				<div  class="calculator__display-block">
+					<div  class="calculator__display-hist">
+						<ol class="history-list"></ol>
+					</div>
 					<div  class="calculator__display-upper">&nbsp</div>
 					<div  class="calculator__display">0</div>
 
@@ -103,55 +104,56 @@
 				</div>
 			</div>
 			<div class="calculator calculator--theme-dark" id="calculator2">
-			<nav class="calculator__menu">
-				<ul class="nav">
-					<li class="nav__item submenu--open">Вид
-						<ul class="nav__submenu submenu">
-							<li class="submenu__item">Тема офрмления:
-								<div id="submenu__radios" class="submenu__radios">
-								  <div>
-								    <input type="radio" data-theme="dark" id="color--dark" name="color" value="dark" checked>
-								    <label for="color--dark">
-								      <span>
-								        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/242518/check-icn.svg" alt="Checked Icon" />
-								      </span>
-								    </label>
-								  </div>
+				<nav class="calculator__menu">
+					<ul class="nav">
+						<li class="nav__item submenu--open">Вид:
+							<ul class="nav__submenu submenu">
 
-								  <div>
-								    <input type="radio" data-theme="light" id="color--light" name="color" value="light">
-								    <label for="color--light">
-								      <span>
-								        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/242518/check-icn.svg" alt="Checked Icon" />
-								      </span>
-								    </label>
-								  </div>
-								</div>
-							</li>
-							<li class="submenu__item">Тип:
-								<div id="submenu__list" class="submenu__list">
-									<div>
-										<label for="mode--simple">
-											<input type="radio" data-mode="simple" id="mode--simple" name="mode" value="Простой" checked>
-											Простой</label>
+								<li class="submenu__item">Тема оформления:
+									<div class="submenu__theme">
+										<div>
+											<label><input type="radio" data-theme="dark"  checked>Темный</label>
+										</div>
+										<div>
+											<label><input type="radio" data-theme="light">Светлый</label>
+										</div>
 									</div>
-									<div>
-										<label for="mode--ing">
-											<input type="radio" data-mode="eng" id="mode--ing" name="mode" value="Инженерный">
-											Инженерный</label>
+								</li>
+								<li class="submenu__item">Тип:
+									<div class="submenu__mode">
+										<div>
+											<label><input type="radio" data-mode="simple" name="simple" value="Простой" checked>Простой</label>
+										</div>
+										<div>
+											<label><input type="radio" data-mode="eng" name="eng" value="Инженерный">Инженерный</label>
+										</div>
 									</div>
-								</div>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</nav>
+								</li>
+
+							</ul>
+						</li>
+						<li class="nav__item submenu--open"> Опции:
+							<ul class="nav__submenu submenu">
+								<li class="submenu__item">История:
+									<div class="submenu__hist">
+										<div>
+											<label><input type="radio" data-hist="close" name="close" value="Закрыть" checked>Закрыть</label>
+										</div>
+										<div>
+											<label><input type="radio" data-hist="open" name="open" value="Открыть">Открыть</label>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
 
 
 				<div  class="calculator__display-block">
+					<div  class="calculator__display-hist">&nbsp</div>
 					<div  class="calculator__display-upper">&nbsp</div>
 					<div  class="calculator__display">0</div>
-
 				</div>
 				<div class="additionalKeysBlock">
 
