--- a/code/src/scss/calc.scss
+++ b/code/src/scss/calc.scss
@@ -1,6 +1,6 @@
 .calculator{
 	//width: 450px;
-	height: 500px;
+	//height: 500px;
 	max-width: 645px;
   border-radius: 10px;
   padding: 30px 10px 10px 10px;
@@ -17,7 +17,7 @@
 
   &__display-block{
 		width: 80%;
-		margin: 0px 15px;
+		margin: 15px;
     height: 15%;
     border-radius: 5px;
     padding: 10px 10px;
@@ -29,7 +29,8 @@
   }
 	&__display-upper{
 		width: 100%;
-		height: 50%;
+		//height: 30%;
+		padding: 10px 0;
 		box-sizing: border-box;
 		font-size: 20px;
 		transition: all 0.3s;
@@ -37,9 +38,21 @@
 		overflow: hidden;
 		text-align: right;
 	}
+	&__display-hist{
+		width: 100%;
+		height: 0px;
+		padding: 10px 0;
+		box-sizing: border-box;
+		font-size: 12px;
+		transition: all 0.3s;
+		text-overflow: ellipsis;
+		overflow-y: scroll;
+		text-align: right;
+	}
 	&__display{
 		width: 100%;
-		height: 50%;
+		//height: 30%;
+		padding: 10px 0;
 		box-sizing: border-box;
 		font-size: 20px;
 		transition: all 0.3s;
@@ -65,6 +78,9 @@
     @extend .calculator__num;
 
   }
+}
+.history-list>li:nth-child(even){
+	background-color: #ddd;
 }
 .programming{
 	display: flex;
