--- a/code/src/html/template/index.html
+++ b/code/src/html/template/index.html
@@ -58,8 +58,13 @@
 									<div>
 										<label><input type="radio" data-hist="open" name="open" value="Открыть">Открыть</label>
 									</div>
+									<div></div>
+									<div>
+										<button type="button" data-hist="clear" class="">Очистить</button>
+									</div>
 								</div>
 							</li>
+
 						</ul>
 					</li>
 				</ul>
@@ -79,7 +84,8 @@
 				<div class="simple">
 					<button  class="calculator__clear button--clear">C</button>
 					<button  data-ops="pow2" class="calculator__ops">x&#178;</button>
-					<button  data-ops="sqrt" class="calculator__ops">&radic;</button>
+					<button  data-ops="opReverse" class="calculator__ops">&#177;</button>
+					<!--<button  data-ops="sqrt" class="calculator__ops">&radic;</button>-->
 					<button  data-ops="proc" class="calculator__ops">&#37;</button>
 
 					<button class="calculator__num" data-num="7">7</button>
@@ -104,56 +110,61 @@
 				</div>
 			</div>
 			<div class="calculator calculator--theme-dark" id="calculator2">
-				<nav class="calculator__menu">
-					<ul class="nav">
-						<li class="nav__item submenu--open">Вид:
-							<ul class="nav__submenu submenu">
-
-								<li class="submenu__item">Тема оформления:
-									<div class="submenu__theme">
-										<div>
-											<label><input type="radio" data-theme="dark"  checked>Темный</label>
-										</div>
-										<div>
-											<label><input type="radio" data-theme="light">Светлый</label>
-										</div>
+			<nav class="calculator__menu">
+				<ul class="nav">
+					<li class="nav__item submenu--open">Вид:
+						<ul class="nav__submenu submenu">
+							<li class="submenu__item">Тема оформления:
+								<div class="submenu__theme">
+									<div>
+										<label><input type="radio" data-theme="dark"  checked>Темный</label>
 									</div>
-								</li>
-								<li class="submenu__item">Тип:
-									<div class="submenu__mode">
-										<div>
-											<label><input type="radio" data-mode="simple" name="simple" value="Простой" checked>Простой</label>
-										</div>
-										<div>
-											<label><input type="radio" data-mode="eng" name="eng" value="Инженерный">Инженерный</label>
-										</div>
+									<div>
+										<label><input type="radio" data-theme="light">Светлый</label>
 									</div>
-								</li>
-
-							</ul>
-						</li>
-						<li class="nav__item submenu--open"> Опции:
-							<ul class="nav__submenu submenu">
-								<li class="submenu__item">История:
-									<div class="submenu__hist">
-										<div>
-											<label><input type="radio" data-hist="close" name="close" value="Закрыть" checked>Закрыть</label>
-										</div>
-										<div>
-											<label><input type="radio" data-hist="open" name="open" value="Открыть">Открыть</label>
-										</div>
+								</div>
+							</li>
+							<li class="submenu__item">Тип:
+								<div class="submenu__mode">
+									<div>
+										<label><input type="radio" data-mode="simple" name="simple" value="Простой" checked>Простой</label>
 									</div>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
+									<div>
+										<label><input type="radio" data-mode="eng" name="eng" value="Инженерный">Инженерный</label>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</li>
+					<li class="nav__item submenu--open"> Опции:
+						<ul class="nav__submenu submenu">
+							<li class="submenu__item">История:
+								<div class="submenu__hist">
+									<div>
+										<label><input type="radio" data-hist="close" name="close" value="Закрыть" checked>Закрыть</label>
+									</div>
+									<div>
+										<label><input type="radio" data-hist="open" name="open" value="Открыть">Открыть</label>
+									</div>
+									<div></div>
+									<div>
+										<button type="button" data-hist="clear" class="">Очистить</button>
+									</div>
+								</div>
+							</li>
 
+						</ul>
+					</li>
+				</ul>
+			</nav>
 
 				<div  class="calculator__display-block">
-					<div  class="calculator__display-hist">&nbsp</div>
+					<div  class="calculator__display-hist">
+						<ol class="history-list"></ol>
+					</div>
 					<div  class="calculator__display-upper">&nbsp</div>
 					<div  class="calculator__display">0</div>
+
 				</div>
 				<div class="additionalKeysBlock">
 
