--- a/code/src/scss/calc.scss
+++ b/code/src/scss/calc.scss
@@ -29,7 +29,7 @@
   }
 	&__display-upper{
 		width: 100%;
-		//height: 30%;
+		height: 40px;
 		padding: 10px 0;
 		box-sizing: border-box;
 		font-size: 20px;
@@ -41,7 +41,6 @@
 	&__display-hist{
 		width: 100%;
 		height: 0px;
-		padding: 10px 0;
 		box-sizing: border-box;
 		font-size: 12px;
 		transition: all 0.3s;
@@ -51,7 +50,7 @@
 	}
 	&__display{
 		width: 100%;
-		//height: 30%;
+		height: 40px;
 		padding: 10px 0;
 		box-sizing: border-box;
 		font-size: 20px;
@@ -79,9 +78,13 @@
 
   }
 }
+.history-list{
+	padding-right: 20px;
+}
 .history-list>li:nth-child(even){
 	background-color: #ddd;
 }
+
 .programming{
 	display: flex;
 	flex-direction: row;
