--- a/code/src/html/template/index.html
+++ b/code/src/html/template/index.html
@@ -78,7 +78,7 @@
 					<div  class="calculator__display">0</div>
 
 				</div>
-				<div class="additionalKeysBlock">
+				<div class="calculator__additional-keys-block">
 
 				</div>
 				<div class="simple">
@@ -166,7 +166,7 @@
 					<div  class="calculator__display">0</div>
 
 				</div>
-				<div class="additionalKeysBlock">
+				<div class="calculator__additional-keys-block">
 
 				</div>
 				<div class="simple">
