--- a/code/src/scss/nav.scss
+++ b/code/src/scss/nav.scss
@@ -12,6 +12,7 @@
 		vertical-align: middle;
 		display: inline-block;
 		color: #999;
+    margin-left: 10px;
 	}
 
 }
@@ -41,7 +42,7 @@
 	flex-direction: column;
 
   }
-	&__list{
+	&__mode{
 		flex-direction: column;
 		justify-content: space-around;
 		align-items: stretch;
@@ -60,53 +61,17 @@
   transform: scale(1);
 }
 
-.submenu__radios {
-	 margin-top: 15px;
+.submenu__theme {
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: stretch;
 
-  div {
-    display: inline-block;
-  }
-
-  input[type="radio"] {
-    display: none;
-
-    + label {
-      color: #333;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-
-      span {
-        display: inline-block;
-        width: 25px;
-        height: 25px;
-        margin: -1px 4px 0 0;
-        vertical-align: middle;
-        cursor: pointer;
-        border-radius: 50%;
-        border: 2px solid #FFFFFF;
-        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
-        background-repeat: no-repeat;
-        background-position: center;
-        text-align: center;
-        line-height: 30px;
-
-        img {
-          opacity: 0;
-          transition: all .3s ease;
-        }
-      }
-    }
-
-    &#color--dark + label span {
-      background-color: $calc__bgc--dark;
-    }
-
-    &#color--light + label span {
-      background-color: darken($button__hover--color, 20%);
-    }
-
-    &:checked + label span img {
-      opacity: 1;
+  &>div{
+    text-align: left;
+    &>label{
+      display: block;
     }
   }
+
+
 }
