--- a/code/src/scss/calc.scss
+++ b/code/src/scss/calc.scss
@@ -161,3 +161,34 @@
     transform: translate3d(0,-2000px,0);
   }
 }
+.pressure{
+			display: flex;
+			flex-direction: row;
+			background-color: #ccc;
+			border-radius: 5px;
+			flex-wrap: wrap;
+			width: 220px;
+			justify-content: center;
+			padding: 5px 1px;
+
+	&__from{
+		width: 110px;
+		height: 100px;
+	}
+	&__to{
+		width: 110px;
+		height: 100px;
+	}
+	&__item{
+		width: 100%;
+		display: block;
+		padding: 5px;
+	}
+	&__button{
+		width: 50%;
+		height: 35px;
+		border-radius: 5px;
+		display: block;
+		padding: 5px;
+	}
+}
