create support modules

--- a/code/src/html/template/index.html
+++ b/code/src/html/template/index.html
@@ -60,7 +60,7 @@
 									</div>
 									<div></div>
 									<div>
-										<button type="button" data-hist="clear" class="">Очистить</button>
+										<button type="button" data-hist="clear" class="history__clear">Очистить</button>
 									</div>
 								</div>
 							</li>
